[tool.poetry]
name = "heroesoftheruins"
version = "0.1.0"
description = "Retro Python Game for OSU Hackathon"
authors = ["kirandesimone <kirandesimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
